/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// 1. syntax, package, option
syntax = "proto3";

package hth.demo.grpc;

option java_multiple_files = true;

enum DemoType {
    TEST = 0;
    DEV = 1;
}
//12345为字段编号，每个字段需要一个编号和protobuf 编解码原理有关
//每个消息应该有类型和字段编号
//repeated: 该字段可以在消息中重复任意多次（包括零）。其中重复值的顺序会被保留。在java中就是List
message DemoRequest {
    string name = 1;
    int32 age = 2;
    repeated string hobbies = 3;
    map<string, string> testMap = 4;
    DemoType type = 5;
}

message DemoResponse {
    string result = 1;
}

// 4. service, unary request/response
service DemoService {
    rpc test(DemoRequest) returns (DemoResponse);
}
